--- a/src/app/components/admin-panel/discount-codes/discount-codes.component.html
+++ b/src/app/components/admin-panel/discount-codes/discount-codes.component.html
@@ -8,8 +8,10 @@
       </div>
       <div class="mt-4 flex flex-col">
 
-        <button type="button"
-                class="mb-2 block rounded-md bg-indigo-600 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
+        <button
+          type="button"
+          (click)="openAddCodeModal()"
+          class="mb-2 block rounded-md bg-indigo-600 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
           Dodaj nowy kod
         </button>
         <div *ngIf="isRemoveButtonVisible()">
@@ -34,9 +36,12 @@
               <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Czy aktywny</th>
               <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Typ zniżki</th>
               <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Wartość zniżki</th>
-              <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Minimalna wartość zamówienia</th>
+              <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Minimalna wartość
+                zamówienia
+              </th>
               <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Ilość użyć</th>
-              <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Maksymalna ilość użyć</th>
+              <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Maksymalna ilość użyć
+              </th>
               <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Aktywny od</th>
               <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Aktywny do</th>
             </tr>
@@ -44,18 +49,23 @@
             <tbody class="divide-y divide-gray-200">
             <tr *ngFor="let code of discountCodes; let i = index" class="odd:bg-white even:bg-gray-100">
               <td class="px-3 py-4 text-sm text-gray-500 whitespace-nowrap">
-                <input type="checkbox" [(ngModel)]="checkedIndexes[i]" class="form-checkbox h-4 w-4 text-gray-500" />
+                <input type="checkbox" [(ngModel)]="checkedIndexes[i]" class="form-checkbox h-4 w-4 text-gray-500"/>
               </td>
               <td class="py-4 pl-4 m-2 text-sm font-medium text-gray-900 whitespace-nowrap ">{{ code.code }}</td>
               <td class="px-3 py-4 text-sm text-gray-500 whitespace-nowrap">
                 {{ code.active ? "Tak" : "Nie" }}
               </td>
               <td class="px-3 py-4 text-sm text-gray-500 whitespace-nowrap">{{ code.discountType }}</td>
-              <td class="px-3 py-4 text-sm text-gray-500 whitespace-nowrap">{{ code.discountValue }}{{code.discountType === "PERCENTAGE" ? "%" : ""}}</td>
-              <td class="px-3 py-4 text-sm text-gray-500 whitespace-nowrap">{{ code.minimumOrderValue | currency:'USD' }}</td>
+              <td
+                class="px-3 py-4 text-sm text-gray-500 whitespace-nowrap">{{ code.discountValue }}{{ code.discountType === "PERCENTAGE" ? "%" : "" }}
+              </td>
+              <td
+                class="px-3 py-4 text-sm text-gray-500 whitespace-nowrap">{{ code.minimumOrderValue | currency:'USD' }}
+              </td>
               <td class="px-3 py-4 text-sm text-gray-500 whitespace-nowrap">{{ code.timesUsed }}</td>
               <td class="px-3 py-4 text-sm text-gray-500 whitespace-nowrap">{{ code.usageLimit }}</td>
-              <td class="px-3 py-4 text-sm text-gray-500 whitespace-nowrap">{{ code.validFrom | date:'mediumDate' }}</td>
+              <td class="px-3 py-4 text-sm text-gray-500 whitespace-nowrap">{{ code.validFrom | date:'mediumDate' }}
+              </td>
               <td class="px-3 py-4 text-sm text-gray-500 whitespace-nowrap">{{ code.validTo | date:'mediumDate' }}</td>
               <td class="relative mx-2 py-4 pl-3 pr-4 text-right text-sm font-medium">
                 <a href="#" class="text-indigo-600 font-semibold hover:text-indigo-900">Edytuj</a>
@@ -68,3 +78,4 @@
     </div>
   </div>
 </div>
+<app-add-code-modal (closeModal)="onModalClosed()"></app-add-code-modal>
